     interpreter's 'site-packages' or 'dist-packages' location will be used,
     so you may have to adjust search paths for any other values. [#3062]
   * The script would now warn the caller if several different Python program
     paths or module locations were discovered (at least one automatically),
     in case this was not something the callers wanted -- just so they know.
     [#1792]

 - Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
   include the source distribution (was posted for NUT v2.8.1 and v2.8.2
   tagged releases, but absent for v2.8.3 and v2.8.4). [#3056]

 - Updated `make spellcheck` to help avoid asciidoc admonition blocks with
   visually invalid sentences (after rendering as a box in HTML or PDF). [#3077]

 - Updated `docs/*.txt`: add asciidoc comments with links to nut-website
   rendered contents of most interesting pages. [#3095]

 - Dropped the `compile` script from Git sources. It originates from automake
   and is added to work area (if missing) during `autogen.sh` rituals anyway.
   It is still distributed as part of `make dist` tarball. [#1209]

 - Default `PIDPATH` is now more strictly `/var/run`, unless building on a
   system conforming to FHS-3.0 standard where that location is absent or
   is a symlink, while `/run` exists and is a true directory. [#3099]

 - Revised CI and deliverable scripts, and Makefile recipes, to not use
   the verbatim `grep -E` (loudly preferred by newer systems, but may be
   absent on older ones) after all, nor use `egrep` (loudly disliked by
   newer systems). Instead, use what `configure` script detected for the
   generated files (or ones made from templates), and use a similar
   detection in standalone scripts. Also revised the use of `grep -q`,
   `id -u`, `diff -u`, etc. which are not ubiquitous, and of `test -e`
   which is not only absent in some older shells, but can cause them to
   abort processing the script immediately. Also the `if ! condition`