@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3563 utf-8
+personal_ws-1.1 en 3564 utf-8
 AAC
 AAS
 ABI
@@ -2865,6 +2865,7 @@ prereqs
 pretentiousVariableNamingSchemes
 prgshut
 printf
+prio
 priv
 privPassword
 privProtocol
