@@ -4,6 +4,9 @@ dnl to embed into scripts and Make rules
 AC_DEFUN([NUT_CHECK_PYTHON_DEFAULT],
 [
     dnl Check for all present variants and pick the default PYTHON
+    dnl Note that the --with... values may involve "auto-prio=NUM"
+    dnl which then sets only one of the values (lowest prio number
+    dnl wins) and discards the others even if detected.
     AC_REQUIRE([NUT_CHECK_PYTHON])
     AC_REQUIRE([NUT_CHECK_PYTHON2])
     AC_REQUIRE([NUT_CHECK_PYTHON3])
@@ -34,6 +37,31 @@ AC_DEFUN([NUT_CHECK_PYTHON_DEFAULT],
     AS_IF([test -z "${PYTHON}" && test x"${nut_with_python}" = xyes], [
         AC_MSG_ERROR([A python interpreter was required but not found or validated])
         ])
+
+    dnl Pick the top-most hit (smallest prio number)
+    BEST_AUTO="`( echo "${nut_with_python}|${PYTHON}"; echo "${nut_with_python2}|${PYTHON2}"; echo "${nut_with_python3}|${PYTHON3}" ) | ${EGREP} "^auto-prio=" | ${EGREP} -v '\|$' | sort -n | head -1`"
+    BEST_AUTO_PRIO="`echo "${BEST_AUTO}" | sed 's,|.*$,,'`"
+    BEST_AUTO_PYTHON="`echo "${BEST_AUTO}" | sed 's,^.*|,,'`"
+    AS_IF([test x"${BEST_AUTO_PYTHON}" != x], [
+        AC_MSG_NOTICE([Got an auto-priority preferred hit: ${BEST_AUTO_PRIO} => ${BEST_AUTO_PYTHON}"])
+        AS_CASE([x"${nut_with_python3}"],
+            [x"${BEST_AUTO_PRIO}"], [AC_MSG_NOTICE([Forgetting PYTHON2='${PYTHON2}' and PYTHON='${PYTHON}' (if any were detected as auto-prio too)])
+                AS_CASE([x"${nut_with_python2}"], [xauto-prio=*], [PYTHON2="no"])
+                AS_CASE([x"${nut_with_python}"], [xauto-prio=*], [PYTHON="no"])
+            ],[AS_CASE([x"${nut_with_python2}"],
+                [x"${BEST_AUTO_PRIO}"], [AC_MSG_NOTICE([Forgetting PYTHON3='${PYTHON3}' and PYTHON='${PYTHON}' (if any were detected as auto-prio too)])
+                    AS_CASE([x"${nut_with_python3}"], [xauto-prio=*], [PYTHON3="no"])
+                    AS_CASE([x"${nut_with_python}"], [xauto-prio=*], [PYTHON="no"])
+                ],[AS_CASE([x"${nut_with_python}"],
+                    [x"${BEST_AUTO_PRIO}"], [AC_MSG_NOTICE([Forgetting PYTHON3='${PYTHON3}' and PYTHON2='${PYTHON2}' (if any were detected as auto-prio too)])
+                        AS_CASE([x"${nut_with_python2}"], [xauto-prio=*], [PYTHON2="no"])
+                        AS_CASE([x"${nut_with_python3}"], [xauto-prio=*], [PYTHON3="no"])
+                ])
+            ])
+        ])
+    ])
+    unset BEST_AUTO_PYTHON
+    unset BEST_AUTO
 ])
 
 dnl Note: this checks for default/un-versioned python version
@@ -42,7 +70,7 @@ dnl variable; it may be further tweaked by NUT_CHECK_PYTHON_DEFAULT
 AC_DEFUN([NUT_CHECK_PYTHON],
 [
     AS_IF([test -z "${nut_with_python}"], [
-        NUT_ARG_WITH([python], [Use a particular program name of the python interpeter], [auto])
+        NUT_ARG_WITH([python], [Use a particular program name of the python interpeter], [auto-prio=3])
 
         PYTHON=""
         PYTHON_SITE_PACKAGES=""
@@ -50,7 +78,7 @@ AC_DEFUN([NUT_CHECK_PYTHON],
         PYTHON_VERSION_INFO_REPORT=""
         PYTHON_SYSPATH_REPORT=""
         AS_CASE([${nut_with_python}],
-            [auto|yes|""], [AC_CHECK_PROGS([PYTHON], [python python3 python2], [_python_runtime])],
+            [auto|auto-prio=*|yes|""], [AC_CHECK_PROGS([PYTHON], [python python3 python2], [_python_runtime])],
             [no], [PYTHON="no"],
             [PYTHON="${nut_with_python}"]
         )
@@ -108,7 +136,7 @@ AC_DEFUN([NUT_CHECK_PYTHON],
         dnl Unfulfilled "yes" is re-tested in NUT_CHECK_PYTHON_DEFAULT
         AS_IF([test -z "${PYTHON}" || test "${PYTHON}" = "no"], [
             AS_CASE([${nut_with_python}],
-                [auto|yes|no|""], [],
+                [auto|auto-prio=*|yes|no|""], [],
                 [AC_MSG_ERROR([A python interpreter was required but not found or validated: ${nut_with_python}])])
             ])
 
@@ -162,7 +190,7 @@ AC_DEFUN([NUT_CHECK_PYTHON],
 AC_DEFUN([NUT_CHECK_PYTHON2],
 [
     AS_IF([test -z "${nut_with_python2}"], [
-        NUT_ARG_WITH([python2], [Use a particular program name of the python2 interpeter for code that needs that version and is not compatible with python3], [auto])
+        NUT_ARG_WITH([python2], [Use a particular program name of the python2 interpeter for code that needs that version and is not compatible with python3], [auto-prio=2])
 
         PYTHON2=""
         PYTHON2_SITE_PACKAGES=""
@@ -170,7 +198,7 @@ AC_DEFUN([NUT_CHECK_PYTHON2],
         PYTHON2_VERSION_INFO_REPORT=""
         PYTHON2_SYSPATH_REPORT=""
         AS_CASE([${nut_with_python2}],
-            [auto|yes|""], [
+            [auto|auto-prio=*|yes|""], [
                 dnl Cross check --with-python results:
                 AS_CASE(["${PYTHON_VERSION_INFO_REPORT}"],
                     [*major=2,*], [
@@ -248,7 +276,7 @@ AC_DEFUN([NUT_CHECK_PYTHON2],
         dnl Unfulfilled "yes" is re-tested in NUT_CHECK_PYTHON_DEFAULT
         AS_IF([test -z "${PYTHON2}" || test "${PYTHON2}" = "no"], [
             AS_CASE([${nut_with_python2}],
-                [auto|yes|no|""], [],
+                [auto|auto-prio=*|yes|no|""], [],
                 [AC_MSG_ERROR([A python2 interpreter was required but not found or validated: ${nut_with_python2}])])
             ])
 
@@ -300,7 +328,7 @@ AC_DEFUN([NUT_CHECK_PYTHON2],
 AC_DEFUN([NUT_CHECK_PYTHON3],
 [
     AS_IF([test -z "${nut_with_python3}"], [
-        NUT_ARG_WITH([python3], [Use a particular program name of the python3 interpeter for code that needs that version and is not compatible with python2], [auto])
+        NUT_ARG_WITH([python3], [Use a particular program name of the python3 interpeter for code that needs that version and is not compatible with python2], [auto-prio=1])
 
         PYTHON3=""
         PYTHON3_SITE_PACKAGES=""
@@ -308,7 +336,7 @@ AC_DEFUN([NUT_CHECK_PYTHON3],
         PYTHON3_VERSION_INFO_REPORT=""
         PYTHON3_SYSPATH_REPORT=""
         AS_CASE([${nut_with_python3}],
-            [auto|yes|""], [
+            [auto|auto-prio=*|yes|""], [
                 dnl Cross check --with-python results:
                 AS_CASE(["${PYTHON_VERSION_INFO_REPORT}"],
                     [*major=3,*], [
@@ -386,7 +414,7 @@ AC_DEFUN([NUT_CHECK_PYTHON3],
         dnl Unfulfilled "yes" is re-tested in NUT_CHECK_PYTHON_DEFAULT
         AS_IF([test -z "${PYTHON3}" || test "${PYTHON3}" = "no"], [
             AS_CASE([${nut_with_python3}],
-                [auto|yes|no|""], [],
+                [auto|auto-prio=*|yes|no|""], [],
                 [AC_MSG_ERROR([A python3 interpreter was required but not found or validated: ${nut_with_python3}])])
             ])
 
